[package]
name = "mythologic"
version = "0.1.0"
edition = "2024"
description = "A comprehensive ontology for modeling global mythological structures"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }

[[bin]]
name = "mythologic_explorer"
path = "src/bin/mythologic_explorer.rs"
